--- a/locales/en-EN.default.json
+++ b/locales/en-EN.default.json
@@ -16,7 +16,7 @@
 			"0": "Bonne nuit."
 		},
 		"oppen-the-light": {
-			"0": "Que la lumière soit."
+			"0": "Que la lumière soit."1
 		},
 		"close-the-light": {
 			"0": "Et l'obscurité arriva."
@@ -25,7 +25,7 @@
 			"0": "Bon film.",
 			"1": "un peu de pop-corn avec ceci."
 		},
-		"romatic": {
+		"romantic": {
 			"0": "Un peu de douceur."
 		},
 		"doorbells": {
@@ -57,7 +57,7 @@
 			"0": "Bon film.",
 			"1": "un peu de pop-corn avec ceci."
 		},
-		"romatic": {
+		"romantic": {
 			"0": "Un peu de douceur."
 		},
 		"doorbells": {
@@ -88,7 +88,7 @@
 			"0": "Bon film.",
 			"1": "un peu de pop-corn avec ceci."
 		},
-		"romatic": {
+		"romantic": {
 			"0": "Un peu de douceur."
 		},
 		"doorbells": {
@@ -119,7 +119,7 @@
 			"0": "Bon film.",
 			"1": "un peu de pop-corn avec ceci."
 		},
-		"romatic": {
+		"romantic": {
 			"0": "Un peu de douceur."
 		},
 		"doorbells": {
@@ -152,7 +152,7 @@
 			"0": "Bon film.",
 			"1": "un peu de pop-corn avec ceci."
 		},
-		"romatic": {
+		"romantic": {
 			"0": "Un peu de douceur."
 		},
 		"doorbells": {
