--- a/locales/fr-FR.default.json
+++ b/locales/fr-FR.default.json
@@ -25,7 +25,7 @@
 			"0": "Bon film.",
 			"1": "un peu de pop-corn avec ceci."
 		},
-		"romatic": {
+		"romantic": {
 			"0": "Un peu de douceur."
 		},
 		"doorbells": {
@@ -57,7 +57,7 @@
 			"0": "Bon film.",
 			"1": "un peu de pop-corn avec ceci."
 		},
-		"romatic": {
+		"romantic": {
 			"0": "Un peu de douceur."
 		},
 		"doorbells": {
@@ -88,7 +88,7 @@
 			"0": "Bon film.",
 			"1": "un peu de pop-corn avec ceci."
 		},
-		"romatic": {
+		"romantic": {
 			"0": "Un peu de douceur."
 		},
 		"doorbells": {
@@ -119,7 +119,7 @@
 			"0": "Bon film.",
 			"1": "un peu de pop-corn avec ceci."
 		},
-		"romatic": {
+		"romantic": {
 			"0": "Un peu de douceur."
 		},
 		"doorbells": {
@@ -152,7 +152,7 @@
 			"0": "Bon film.",
 			"1": "un peu de pop-corn avec ceci."
 		},
-		"romatic": {
+		"romantic": {
 			"0": "Un peu de douceur."
 		},
 		"doorbells": {
